# antioch

./: .clang-format  .gitignore  CMakeLists.txt  README.md  sdkconfig
.github/workflows/: build-and-test-antioch.yml  build-antioch.yml
bart/include/: bart_converter.h  bart_line.h  bart_station.h  station_arrivals.h  station_identifier.h  train_description.h
bart/include/bart/: bart_converter.h  bart_line.h  bart_station.h  station_arrivals.h  station_identifier.h  util.h
bart/src/: bart_converter.cpp  bart_line.cpp  bart_station.cpp  station_arrivals.cpp  station_identifier.cpp  util.cpp
bart/test/: e2e.cpp  test_runner.cpp
base/: main.cpp
base/include/antioch/base/: configerator.h  constants.h  event_loop.h  service.h  types.h
base/include/antioch/base/config/: config.h  configerator.h
base/src/: configerator.cpp  event_loop.cpp  service.cpp
base/src/config/: config.cpp  configerator.cpp
base/test/: test_runner.cpp  trivial_test.cpp
connectivity/curl/include/: latch.h  multi_performer.h  transfer.h
connectivity/curl/src/: latch.cpp  multi_performer.cpp  transfer.cpp
connectivity/curl/test/: e2e.cpp
connectivity/wifi/include/antioch/connectivity/wifi/: wifi_connection_error.h  wifi_service.h
connectivity/wifi/src/: wifi_service.cpp
device/common/input/hal/: input.h
device/common/wifi/: wifi.h
device/common/wifi/hal/: wifi.h
device/esp32/input/: input.cpp
device/esp32/wifi/: wifi.cpp
device/linux/input/: input.cmake  input.cpp
device/linux/wifi/: wifi.cmake  wifi.cpp
esp_components/curl/include/curl/: curl.h  curlbuild.h  curlver.h  system.h
esp_components/curl/lib/: Makefile.inc  config-win32.h  content_encoding.c  cookie.c  curl_addrinfo.c  curl_config.h  curl_config.h.cmake  easy.c  formdata.c  hostip.c  http_proxy.c  imap.c  krb5.c  mk-ca-bundle.pl  multi.c  openldap.c  pop3.c  select.h  sendf.c  setopt.c  smtp.c  ssh-libssh.c  ssh.c  url.c  url.h  urldata.h
esp_components/curl/lib/vtls/: mbedtls.c  openssl.c
esp_components/esp_main/: CMakeLists.txt  main.cpp
esp_components/input-hal/: CMakeLists.txt
esp_components/libwifi/: CMakeLists.txt
esp_components/nlohmann_json/: CMakeLists.txt
esp_components/proto-objs/: CMakeLists.txt
esp_components/sfmtc-bart/: CMakeLists.txt
esp_components/sfmtc-muni/: CMakeLists.txt
esp_components/transit-base/: CMakeLists.txt
esp_components/wifi-hal/: CMakeLists.txt
espgazer/: CMakeLists.txt  espgazer_runner.cpp  espgazer_runner.h  main.cpp
fw/esp32-hub75/: CMakeLists.txt
fw/esp32-hub75/src/: ESP32-HUB75-MatrixPanel-I2S-DMA.h
gfx/: CMakeLists.txt
gfx/include/gfx/: gfx.h  gfx_constants.h  gfx_enums.h  gfx_helpers.h  gfx_structs.h  gfx_typedefs.h
gfx/include/private/base/: allocation.h  driver_impl.h  function_impl.h  object_base.h  object_impl.h
gfx/include/private/sdl2/: objects.h
gfx/include/public/gfx/: gfx.h  gfx_enums.h  gfx_structs.h  gfx_typedefs.h
gfx/src/: command_buffer.cpp  device.cpp  instance.cpp  main.cpp
gfx/src/base/: command_buffer.cpp  device.cpp  instance.cpp
gfx/src/base/include/base/: function_impl.h  object_base.h
gfx/src/base/include/common/: allocation.h
gfx/src/esp32/: command_buffer_impl.cpp  device_impl.cpp  instance_impl.cpp
gfx/src/esp32/include/esp32/: objects.h
gfx/src/sdl2/: command_buffer_impl.cpp  device_impl.cpp  instance_impl.cpp  main.cpp
gfx/src/sdl2/include/sdl2/: objects.h
gfx/tests/: CMakeLists.txt  gfx_tests.cpp
gfx/tests/backend/: command_buffer_impl.cpp  device_impl.cpp  instance_impl.cpp
gfx/tests/backend/include/: test_objects.h
moonlight_vigil/: main.cpp
product/: common.cmake  linux.cmake  rpi3.cmake
sfmtc/bart/include/sfmtc/bart/: bart_converter.h  bart_line.h  bart_station.h  station_arrivals.h  station_identifier.h  util.h
sfmtc/bart/src/: bart_converter.cpp  bart_line.cpp  bart_station.cpp  station_arrivals.cpp  station_identifier.cpp  util.cpp
sfmtc/bart/test/: e2e.cpp
sfmtc/common/include/sfmtc/: sfmtc_converter.h  station_arrivals.h
sfmtc/common/src/: sfmtc_converter.cpp  station_arrivals.cpp
sfmtc/common/test/: e2e.cpp  test_runner.cpp
sfmtc/muni/include/sfmtc/muni/: muni_line.h  muni_station.h  station_identifier.h  util.h
sfmtc/muni/src/: muni_line.cpp  muni_station.cpp  station_identifier.cpp  util.cpp
sfmtc/src/util/: a.out  enum_splitter.cpp  splitter
sfmuni/include/: line_identifier.h  station_identifier.h
sfmuni/src/: line_identifier.cpp  station_identifier.cpp
sungazer/: main.cpp
transit_base/include/antioch/transit_base/: converter.h  station.h  transit_agency.h
